# serializer version: 1
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests
  '''
  
  SELECT team_id,
         multiIf(event LIKE 'helicone%', 'helicone_events', event LIKE 'langfuse%', 'langfuse_events', event LIKE 'keywords_ai%', 'keywords_ai_events', event LIKE 'traceloop%', 'traceloop_events', JSONExtractString(properties, '$lib') = 'web', 'web_events', JSONExtractString(properties, '$lib') = 'posthog-node', 'node_events', JSONExtractString(properties, '$lib') = 'posthog-android', 'android_events', JSONExtractString(properties, '$lib') = 'posthog-flutter', 'flutter_events', JSONExtractString(properties, '$lib') = 'posthog-ios', 'ios_events', JSONExtractString(properties, '$lib') = 'posthog-go', 'go_events', JSONExtractString(properties, '$lib') = 'posthog-java', 'java_events', JSONExtractString(properties, '$lib') = 'posthog-react-native', 'react_native_events', JSONExtractString(properties, '$lib') = 'posthog-ruby', 'ruby_events', JSONExtractString(properties, '$lib') = 'posthog-python', 'python_events', JSONExtractString(properties, '$lib') = 'posthog-php', 'php_events', 'other') AS metric,
         count(1) as count
  FROM events
  WHERE timestamp BETWEEN '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
  GROUP BY team_id,
           metric
  HAVING metric != 'other'
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.1
  '''
  
  SELECT team_id,
         count(distinct toDate(timestamp), event, cityHash64(distinct_id), cityHash64(uuid)) as count
  FROM events
  WHERE timestamp between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND event != '$feature_flag_called'
    AND event NOT IN ('survey sent',
                      'survey shown',
                      'survey dismissed')
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.10
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(query_duration_ms) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['hogql_query', 'HogQLQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = ''
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.11
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(read_bytes) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['hogql_query', 'HogQLQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = 'personal_api_key'
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.12
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(read_rows) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['hogql_query', 'HogQLQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = 'personal_api_key'
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.13
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(query_duration_ms) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['hogql_query', 'HogQLQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = 'personal_api_key'
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.14
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(read_bytes) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['EventsQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = ''
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.15
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(read_rows) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['EventsQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = ''
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.16
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(query_duration_ms) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['EventsQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = ''
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.17
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(read_bytes) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['EventsQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = 'personal_api_key'
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.18
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(read_rows) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['EventsQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = 'personal_api_key'
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.19
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(query_duration_ms) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['EventsQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = 'personal_api_key'
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.2
  '''
  
  SELECT team_id,
         count(distinct toDate(timestamp), event, cityHash64(distinct_id), cityHash64(uuid)) as count
  FROM events
  WHERE timestamp between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND event != '$feature_flag_called'
    AND event NOT IN ('survey sent',
                      'survey shown',
                      'survey dismissed')
    AND person_mode IN ('full',
                        'force_upgrade')
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.20
  '''
  
  SELECT team_id,
         COUNT() as count
  FROM events
  WHERE event = 'survey sent'
    AND timestamp between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.21
  '''
  
  SELECT team_id,
         SUM(count) as count
  FROM app_metrics2
  WHERE app_source='hog_function'
    AND metric_name IN ('succeeded',
                        'failed')
    AND timestamp between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
  GROUP BY team_id,
           metric_name
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.22
  '''
  
  SELECT team_id,
         SUM(count) as count
  FROM app_metrics2
  WHERE app_source='hog_function'
    AND metric_name IN ('fetch')
    AND timestamp between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
  GROUP BY team_id,
           metric_name
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.3
  '''
  
  SELECT team_id,
         count(1) as count
  FROM events
  WHERE timestamp between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND ($group_0 != ''
         OR $group_1 != ''
         OR $group_2 != ''
         OR $group_3 != ''
         OR $group_4 != '')
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.4
  '''
  
  SELECT team_id,
         count(distinct session_id) as count
  FROM
    (SELECT any(team_id) as team_id,
            session_id
     FROM session_replay_events
     WHERE min_first_timestamp BETWEEN '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
     GROUP BY session_id
     HAVING ifNull(argMinMerge(snapshot_source), 'web') == 'web')
  WHERE session_id NOT IN
      (SELECT DISTINCT session_id
       FROM session_replay_events
       WHERE min_first_timestamp BETWEEN '2022-01-09 00:00:00' AND '2022-01-10 00:00:00'
       GROUP BY session_id)
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.5
  '''
  
  SELECT team_id,
         count(distinct session_id) as count
  FROM
    (SELECT any(team_id) as team_id,
            session_id
     FROM session_replay_events
     WHERE min_first_timestamp BETWEEN '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
     GROUP BY session_id
     HAVING ifNull(argMinMerge(snapshot_source), 'web') == 'mobile')
  WHERE session_id NOT IN
      (SELECT DISTINCT session_id
       FROM session_replay_events
       WHERE min_first_timestamp BETWEEN '2022-01-09 00:00:00' AND '2022-01-10 00:00:00'
       GROUP BY session_id)
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.6
  '''
  
  SELECT distinct_id as team,
         sum(JSONExtractInt(properties, 'count')) as sum
  FROM events
  WHERE team_id = 2
    AND event='decide usage'
    AND timestamp between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND has(['correct'], replaceRegexpAll(JSONExtractRaw(properties, 'token'), '^"|"$', ''))
  GROUP BY team
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.7
  '''
  
  SELECT distinct_id as team,
         sum(JSONExtractInt(properties, 'count')) as sum
  FROM events
  WHERE team_id = 2
    AND event='local evaluation usage'
    AND timestamp between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND has(['correct'], replaceRegexpAll(JSONExtractRaw(properties, 'token'), '^"|"$', ''))
  GROUP BY team
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.8
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(read_bytes) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['hogql_query', 'HogQLQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = ''
  GROUP BY team_id
  '''
# ---
# name: TestFeatureFlagsUsageReport.test_usage_report_decide_requests.9
  '''
  WITH JSONExtractInt(log_comment, 'team_id') as team_id,
       JSONExtractString(log_comment, 'query_type') as query_type,
       JSONExtractString(log_comment, 'access_method') as access_method
  SELECT team_id,
         sum(read_rows) as count
  FROM clusterAllReplicas(posthog, system.query_log)
  WHERE (type = 'QueryFinish'
         OR type = 'ExceptionWhileProcessing')
    AND is_initial_query = 1
    AND query_type IN (['hogql_query', 'HogQLQuery'])
    AND query_start_time between '2022-01-10 00:00:00' AND '2022-01-10 23:59:59'
    AND access_method = ''
  GROUP BY team_id
  '''
# ---
